tests/type_errors/ord_trait_violation.nos
# expect_error: does not implement
# Test: using < on type that doesn't implement Ord

type Unordered = { data: Int -> Int }  # Functions don't implement Ord

main() = {
    a = Unordered(x => x)
    b = Unordered(x => x * 2)
    a < b  # Unordered doesn't implement Ord
}
